# dict2sql

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml  test.yaml
dict2sql/: __init__.py  compiler.py  compiler_misc.py  production_rules_test.py  sqlite_test.py  types.py  utils.py
dict2sql/dialects/ansi/: clause_from.py  clause_limit.py  clause_select.py  clause_where.py  sqlite_test.py  statement.py  statement_delete.py  statement_insert.py  statement_select.py  statement_update.py  utils.py
dict2sql/test_fixtures/: utils.py
